fix: text wrap and flex wrap on project cards on small screens

--- a/catppuccin.user.less
+++ b/catppuccin.user.less
@@ -2,7 +2,7 @@
 @name Flavortown Catppuccin
 @namespace elijah629
 @homepageURL https://github.com/elijah629/flavortown-catppuccin
-@version 2025.12.23-3
+@version 2025.12.23-4
 @updateURL https://github.com/elijah629/flavortown-catppuccin/raw/main/catppuccin.user.less
 @description Soothing pastel theme for hackclub/flavortown
 @author elijah629
@@ -94,7 +94,7 @@
 
     html,
     body {
-      background: @base !important;
+      background-color: @base !important;
       color: @text !important;
       background-image: none !important;
     }
@@ -354,6 +354,24 @@
 
     .project-card__banner-placeholder-text {
       color: @overlay2 !important;
+    }
+
+    .project-show-card__ship-btn {
+      color: @text;
+    }
+
+    .project-show-card__titlebar,
+    .project-show-card__stats {
+      flex-wrap: wrap;
+    }
+
+    .project-show-card__byline {
+      margin-top: 1rem;
+    }
+
+    .project-show-card__description > p {
+      text-wrap: wrap;
+      word-break: break-all;
     }
 
     .report-btn {
